--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
